--- a/closedverse_main/templates/closedverse_main/elements/message-form.html
+++ b/closedverse_main/templates/closedverse_main/elements/message-form.html
@@ -7,7 +7,7 @@
 			<li><label class="textarea-menu-text">
 				<input type="radio" name="_post_type" value="body">
 			</label></li>
-			<li><label class="textarea-menu-memo checked">
+			<li><label class="textarea-menu-memo">
 			<input type="radio" name="_post_type" value="painting">
 			</label></li>
 		</menu>
