--- a/closedverse_main/templates/closedverse_main/elements/post-comment.html
+++ b/closedverse_main/templates/closedverse_main/elements/post-comment.html
@@ -15,7 +15,7 @@
     {% if comment.drawing %}
     <p class="reply-content-memo"><img src="{{ comment.drawing }}"></p>
 	{% else %}
-    <p class="reply-content-text">{{ comment.body|linebreaksbr }}</p>
+    <div class="reply-content-text">{{ comment.body|linebreaksbr }}</div>
 	{% endif %}
 	{% if comment.screenshot %}
 	<div class="screenshot-container still-image"><img src="{{ comment.screenshot }}"></div>
