--- a/closedverse_main/templates/closedverse_main/help/faq.html
+++ b/closedverse_main/templates/closedverse_main/help/faq.html
@@ -19,7 +19,9 @@
 		<p>Sorry, but the dark black theme was too dark.</p>
 		
 		<h2>Less question-y questions</h2>
-        <h2>Closedverse? What?</h2>
+        <h2>Haha, now where's my Markdown?</h2>
+		<p>Sorry, but I just haven't been able to make it happen. Discord's Markdown is really just fake Markdown, as it has lots more to it: headings, images, links, paragraphs, you get the idea. All of the implementations of Markdown in Python have either all of that or nothing.<br>There is really Markdown, but it's in Messages, which is why one line break now looks like a space in messages.<br>Again, sorry. If anyone could find a good enough text formatting implementation that works in Django, let me know.</p>
+		<h2>Closedverse? What?</h2>
         <p>Yes, that's the name I'm using.</p>
         <p>This entire thing was supposed to be an Openverse parody and was meant to be made completely and entirely made from when PF2M closed Openverse to now in a span of a few weeks, but I did not get that done in time thanks to school, PF2M was informed beforehand and didn't want to work on Openverse any more after his knowing of this. Oh well.</p>
 
