--- a/closedverse_main/templates/closedverse_main/layout.html
+++ b/closedverse_main/templates/closedverse_main/layout.html
@@ -35,8 +35,7 @@
 			  <li id="global-menu-news"><a href="{% url "main:notifications" %}" class="symbol"></a></li>
               <li id="global-menu-my-menu"><button class="symbol js-open-global-my-menu open-global-my-menu"></button>
                 <menu id="global-my-menu" class="invisible none">
-                  <li><a href="{% url "main:profile-settings" %}" class="symbol my-menu-profile-setting"><span>Profile settings</span></a></li>
-                  <!--<li><a href="/settings/account" class="symbol my-menu-miiverse-setting"><span>Miiverse Settings</span></a></li>-->
+                  <li><a href="{% url "main:profile-settings" %}" class="symbol my-menu-profile-setting"><span>Profile and account settings</span></a></li>
                   <li><a href="{% url "main:special-community-tag" "announcements" %}" class="symbol my-menu-openman"><span>Closedverse Announcements</span></a></li>
                   <li><a href="{% url "main:help-faq" %}" class="symbol my-menu-guide"><span>Frequently Asked Questions (FAQ)</span></a></li>
                   <li><a href="#" class="symbol my-menu-white-power"><span>Feedback/bug report</span></a></li>
