--- a/closedverse_main/templates/closedverse_main/profile-settings.html
+++ b/closedverse_main/templates/closedverse_main/profile-settings.html
@@ -1,9 +1,9 @@
 {% extends "closedverse_main/layout.html" %}
-{% block main-body %}{% load closedverse_user %}
+{% block main-body %}{% load closedverse_user %}{% load closedverse_tags %}
 {% user_sidebar request user profile 0 %}
 <div class="main-column"><div class="post-list-outline">
 <h2 class="label">{{ title }}</h2>
-<form class="setting-form" method="post">
+<form class="setting-form" method="post" action="{% url "main:user-view" user.username %}">
 <ul class="settings-list">
       <li class="setting-nickname">
         <p class="settings-label">Nickname</p>
@@ -16,7 +16,7 @@
         <p class="settings-label">Profile comment</p>
         <textarea class="textarea" name="profile_comment" maxlength="2200" placeholder="Write about yourself here.">{{ profile.comment }}</textarea>
 
-        <p class="note">Anything you write here will appear on your profile. Remember to keep it brief. Please don't write anything that'll violate <a href="/help/rules">Closedverse's rules</a>.</p>
+        <p class="note">Anything you write here will appear on your profile. Remember to keep it brief. Please don't write anything that'll violate <a href="{% url "main:help-rules" %">Closedverse's rules</a>.</p>
       </li>
 	  <!--
       <li>
@@ -63,33 +63,27 @@
         </div>
       </li>
 	  {% endif %}
-	  <!--
-      <li class="setting-avatarsecond">
-        <p class="settings-label">Nintendo Network ID (NNID)</p>
-        <div class="center center-input">
-			<input type="text" name="origin_id" maxlength="16" placeholder="NNID" value="{{ user.origin_id }}">
-		</div>
-        <p class="note">You can enter a Nintendo Network ID here if it exists, and then it will be used as your avatar.
-		{% if user.origin_id %}
-		<br><a href="#" class="">Click here to clear your ID to use something else.</a></p>
-		{% else %}</p>
-		{% endif %}
-      </li>
-      <li class="setting-avatar">
-        <p class="settings-label">Avatar</p>
-        <div class="center center-input">
-			<input type="text" name="avatar" maxlength="255" placeholder="Avatar" {% if user.origin_id %}disabled class="disabled" value="Using Mii from ID {{ user.origin_id }}"{% else %}value="{{ user.avatar }}"{% endif %}>
-		</div>
-        <p class="note">Todo: Either make this an upload or an NNID form</p>
-      </li>
-	  -->
-	  <li class="setting-avatar">
-        <p class="settings-label">Avatar</p>
-        <div class="center center-input">
-			<input name="avatar" maxlength="255" placeholder="Avatar" value="{{ user.avatar }}">
-		</div>
-        <p class="note">This should be either a URL link to your avatar or the letters and numbers of a Mii URL (like "3oyie3zp1pdev"). This field will be replaced with a better one in the very near future.</p>
-      </li>
+		<li class="setting-nnid">
+                <p class="settings-label">Nintendo Network ID</p>
+                <div class="icon-container">
+                    <img class="icon nnid-icon mii" src="{% miionly user.mh %}">
+                </div>
+                  <input type="text" name="origin_id" minlength="6" maxlength="16" placeholder="Nintendo Network ID{% if not user.origin_id %} (None){% endif %}" value="{{ user.origin_id }}" data-action="{% url "main:origin-id-get" %}">
+				  <input type="hidden" name="mh" value="{{ user.mh }}">
+                <p class="error"></p>
+                <p class="note">Enter your Nintendo Network ID here. It'll appear on your profile if you set it to be visible.</p>
+              </li>
+              <li class="setting-avatar">
+                <div class="icon-container">
+                    <img class="icon nnid-icon mii{% if user.has_gravatar %} none{% endif %}" src="{% miionly user.mh %}">
+					<img class="icon nnid-icon gravatar{% if not user.has_gravatar %} none{% endif %}" src="{{ user.gravatar }}">
+                  </div>
+                <p class="settings-label">Do you want the avatar shown beside your content to use the Mii from your Nintendo Network ID or a Gravatar?</p>
+                <label><input type="radio" name="avatar" value="0"{% if not user.has_gravatar %} checked{% endif %}>Mii</label>
+                <label><input type="radio" name="avatar" value="1"{% if user.has_gravatar %} checked{% endif %}>Gravatar</label>
+                <p class="note">Selecting the Gravatar option will cause your avatar to be pulled from the <a href="https://gravatar.com">Gravatar account</a> linked to your email address, and feelings won't be shown in your posts unless you choose to use a Mii instead.</p>
+         </li>
+
 	{% csrf_token %}
 	<div class="form-buttons">
 	<input type="submit" class="black-button apply-button" value="Save these settings">
