--- a/static/darkness.css
+++ b/static/darkness.css
@@ -23,6 +23,12 @@ input[type=text], input[type=password], input[type=email], input:not([type]), se
 .guest-message .arrow-button {
   border-top: 1px solid #000 !important;
 }
+.delete {
+    color: #ccc;
+}
+.delete:hover {
+    color: #202030 !important;
+}
 .spoiler-button, .textarea-line {
     border: 1px solid #000;
     box-shadow: 0 1px 0 rgba(0, 0, 0, 0);
