--- a/closedverse_main/templates/closedverse_main/help/rules.html
+++ b/closedverse_main/templates/closedverse_main/help/rules.html
@@ -5,11 +5,22 @@
 <div class="post-list-outline">
     <h2 class="label">Closedverse Rules</h2>
       <div class="help-content">
-        <p>Hooh
+        <p>There aren't any.<br><br><br><br>Well, actually there's just one.
 		<br>
-		<b>1</b>niggr
+		<b>1: </b> You know what you can't do. Well, hopefully you do.
+		If you do or are doing something bad, it's up to a moderator/admin/any other authority to delete your stuff or give you a ban. You'll be given a reason if it isn't obvious. If it's something that isn't simple, it'll be worked out whether you regret it or not.
+		<br><br>Okay? Understood? Thanks, see ya.
 		</p>
         
+		<h2>But of course, it can never be as simple as that</h2>
+		<h3>NSFW</h3>
+		<p>At the moment, NSFW stuff is forbidden, unless in messages where the other person is okay with it.<br>I might be implementing an "NSFW community" system, in which someone can post there and not have the posts their in their profile, and also viewing the community will give a warning.</p>
+		<h3>Anime</h3>
+		<p>No.</p>
+		<h3>Hacking</h3>
+		<p>I'm pretty hack-proof. You don't need to hack me to see my source code, it's available at <a href="https://github.com/ariankordi/closedverse">https://github.com/ariankordi/closedverse</a>.<br>If you can't read that, perhaps you should spend your time figuring out how to.<br>Specifically, I'm using Django. It's free of 99.9999% of injections, so there isn't any point to injecting HTML or SQL. If you do, you'll look like an idiot.</p>
+		<h3>Spam</h3>
+		<p>Please don't, I have an Amazon Web Services bill to pay at the end of each month.</p>
       </div>
   </div>
 </div>
