--- a/closedverse_main/templates/closedverse_main/community_list.html
+++ b/closedverse_main/templates/closedverse_main/community_list.html
@@ -13,7 +13,7 @@
 		{% if settings.memo_title and settings.memo_msg %}
 		<div class="post-list-outline index-memo">
 			<h2 class="label">{{ settings.memo_title }}</h2>
-			<p>{{ settings.memo_msg }}<!--This is something I made in a week. Good projects don't have to be or take 6 months in the making. Is it better than Openverse? I don't know, but you can check it out for yourself.--></p>
+			{% autoescape off %}{{ settings.memo_msg }}{% endautoescape %}
 		</div>
 		{% endif %}
 	</div>
@@ -28,6 +28,7 @@
 			<a class="arrow-button" href="{% url "main:help-faq" %}"><span>Frequently Asked Questions (FAQ)</span></a>
 			{% if settings.PROD %}
 			<a class="arrow-button" href="{% url "main:help-legal" %}"><span>Legal information</span></a>
+			<a class="arrow-button" href="{% url "main:help-contact" %}"><span>Contact information</span></a>
 			{% endif %}
 			<a class="arrow-button" href="https://www.pf2m.com/openverse/"><span>Info about Openverse</span></a>
 		</div>
