--- a/closedverse_main/templates/closedverse_main/elements/profile-post.html
+++ b/closedverse_main/templates/closedverse_main/elements/profile-post.html
@@ -14,6 +14,9 @@
 				{% endif %}
               <a class="timestamp" {% if post.spoils and not post.is_mine %}data-href-hidden{% else %}href{% endif %}="{% url "main:post-view" post.id %}">{% time post.created %}</a>
             </p>
+					{% if post.yt_vid %}
+					<a href="{% url "main:post-view" post.id %}" class="screenshot-container video"><img height="48" src="https://i.ytimg.com/vi/{{ post.yt_vid }}/default.jpg"></a>
+					{% endif %}
 			{% if post.screenshot %}
 			<a href="{% url "main:post-view" post.id %}" class="screenshot-container still-image"><img src="{{ post.screenshot }}"></a>
 			{% endif %}
