Fixing an issue with avatars

--- a/closedverse_main/templates/closedverse_main/help/faq.html
+++ b/closedverse_main/templates/closedverse_main/help/faq.html
@@ -19,6 +19,8 @@
 		<p>No. If you need to delete one by emergency though, contact me.<br>The reason is kinda simple: it's like a domino effect if I delete your account, if I delete your account, then your profile, posts, comments, messages, friendships, follows, etc. are deleted. Obviously, that should be so, but I don't have a "fake deletion" system like Miiverse does, if it's deleted, then it's GONE forever, bye-bye, see ya.<br>I might make it a thing in the future though.</p>
 		<h2>I'm not getting emails when resetting my password.</h2>
 		<p>Sorry, I don't know what to do when that happens. Of course, you should check your spam folder, since I'm not using my own host and am using PF2M's because his is easier to manage.<br>Again, contact me/us.</p>
+		<h2>How do I set a custom avatar?</h2>
+		<p>To do that, you need a Gravatar account. Gravatar lets sites automatically get an avatar from an e-mail address registered on Gravatar.<br>So, first, register for Gravatar on <a href="https://en.gravatar.com/">their site</a>. Yes, you need a WordPress account, but you might find more sites that use Gravatar.<br>After you have that set up, your avatar won't instantly update, you have to go into <a href="{% url "main:profile-settings" %}">Profile Settings</a> and select (or re-select) your avatar as a Gravatar, then actually that's it.<br>GIFs may or may not work. I'm not sure. I don't like them anyway, so yeah.</p>
 		
 		<h2>Less question-y questions</h2>
 		<h2>What's with the Splatoon loading animation? It looks stupid.</h2>
