--- a/closedverse_main/templates/closedverse_main/signup_page.html
+++ b/closedverse_main/templates/closedverse_main/signup_page.html
@@ -9,7 +9,7 @@
 			<h3 class="label"><label><span class="red">*</span> User ID: <input type="text" class="auth-input" name="username" maxlength="32" minlength="4" placeholder="ID"></label></h3>
 			<h3 class="label"><label>Nickname: <input type="text" class="auth-input" name="nickname" maxlength="32" placeholder="Nick/Mii name?"></label></h3>
 			<h3 class="label"><label>Nintendo Network ID: <input type="text" class="auth-input" name="origin_id" maxlength="16" minlength="6" placeholder="NNID"></label></h3>
-			<h3 class="label"><label><span class="red">*</span> E-mail address: <input type="email" class="auth-input" name="email" maxlength="254" minlength="6" placeholder="Email"></label></h3>
+			<h3 class="label"><label><span class="red">%</span> E-mail address: <input type="email" class="auth-input" name="email" maxlength="254" minlength="6" placeholder="Email"></label></h3>
 			<h3 class="label"><label><span class="red">*</span> Password: <input type="password" class="auth-input" name="password" maxlength="32" minlength="6" placeholder="Password"></label></h3>
 			<h3 class="label"><label><span class="red">*</span> Confirm password: <input type="password" class="auth-input" name="password_again" maxlength="32" minlength="6" placeholder="Password again"></label></h3>
 			{% csrf_token %}
@@ -25,7 +25,7 @@
 				<p>NNIDs are only required for getting a Mii and a nickname from.</p>
 				<p>If you do not provide a nickname but provide an NNID, the nickname will be taken from that ID. The ID's nickname, however, is prioritized over the nickname field.</p>
 				<p>You will be able to change your avatar after you sign up.</p>
-				<p>This process uses Invisible reCAPTCHA. Sorry if it causes pain.</p>
+				<p><span class="red">%</span>: If you don't fill in your email address, you can't reset your password until you have one.</p>
 			</div>
 		</form>
 	</div>
