More bugfixes and AJAX stats

--- a/closedverse_main/templates/closedverse_main/help/stats.html
+++ b/closedverse_main/templates/closedverse_main/help/stats.html
@@ -3,7 +3,7 @@
 {% user_sidebar request user user.profile 0 True %}
 <div class="main-column" id="help">
 <div class="post-list-outline">
-    <h2 class="label">Frequently Asked Questions (FAQ)</h2>
+    <h2 class="label">Server statss</h2>
     <div id="guide" class="help-content">
       <div class="faq">
         <p>Ever wanted to see the server's statistics? Well, now you can!</p>
@@ -16,7 +16,7 @@
 		<li>Yeahs: <strong>{{ yeahs }}</strong></li>
 		<li>Complaints: <strong>{{ complaints }}</strong></li>
 		</ul>
-        <button class="button">Refresh please</button>
+        <button class="button reload-btn">Refresh please</button>
       </div>
     </div>
   </div>
