--- a/closedverse_main/templates/closedverse_main/user_friends.html
+++ b/closedverse_main/templates/closedverse_main/user_friends.html
@@ -6,7 +6,7 @@
 
 {% if not friends %}
 	{% if user.is_me %}
-		{% nocontent "You don't have any friends yet." %}
+		{% nocontent "You don't have any friends." %}
 	{% else %}
 		{% nocontent "This user doesn't have any friends added." %}
 	{% endif %}
