--- a/closedverse_main/templates/closedverse_main/help/stats.html
+++ b/closedverse_main/templates/closedverse_main/help/stats.html
@@ -3,7 +3,7 @@
 {% user_sidebar request user user.profile 0 True %}
 <div class="main-column" id="help">
 <div class="post-list-outline">
-    <h2 class="label">Server statss</h2>
+    <h2 class="label">Server stats</h2>
     <div id="guide" class="help-content">
       <div class="faq">
         <p>Ever wanted to see the server's statistics? Well, now you can!</p>
@@ -15,6 +15,9 @@
 		<li>Messages: <strong>{{ messages }}</strong></li>
 		<li>Yeahs: <strong>{{ yeahs }}</strong></li>
 		<li>Complaints: <strong>{{ complaints }}</strong></li>
+		<li>Notifications: <strong>{{ notifications }}</strong></li>
+		<li>Follows: <strong>{{ follows }}</strong></li>
+		<li>Friendships: <strong>{{ friendships }}</strong></li>
 		</ul>
         <button class="button reload-btn">Refresh please</button>
       </div>
