Actually fixed notifs and community refresh

--- a/closedverse_main/templates/closedverse_main/elements/community_sidebar.html
+++ b/closedverse_main/templates/closedverse_main/elements/community_sidebar.html
@@ -26,6 +26,7 @@
       <div class="community-description js-community-description">
         <p class="text js-truncated-text">{{ community.description|linebreaksbr }}</p>
       </div>
+	  <button class="button reload-btn">Refresh posts</button>
 	{% endif %}
   </section>
 </div>
