--- a/closedverse_main/templates/closedverse_main/layout.html
+++ b/closedverse_main/templates/closedverse_main/layout.html
@@ -37,6 +37,7 @@
                 <menu id="global-my-menu" class="invisible none">
                   <li><a href="{% url "main:profile-settings" %}" class="symbol my-menu-profile-setting"><span>Profile and account settings</span></a></li>
                   <li><a href="{% url "main:special-community-tag" "announcements" %}" class="symbol my-menu-openman"><span>Closedverse Announcements</span></a></li>
+                  <li><a href="{% url "main:special-community-tag" "changelog" %}" class="symbol my-menu-openman"><span>Closedverse Changelog</span></a></li>
                   <li><a href="{% url "main:help-faq" %}" class="symbol my-menu-guide"><span>Frequently Asked Questions (FAQ)</span></a></li>
 				  <li><a href="{% url "main:help-contact" %}" class="symbol my-menu-guide"><span>Contact Information</span></a></li>
                   <li><a href="#" class="symbol my-menu-white-power"><span>Feedback/bug report</span></a></li>
